example/errors/xx-calc.dpl.err
val
Error in line 4 file '__main__'
Cause:
Traceback (most recent call last):
  File "/storage/emulated/0/dpl/lib/core/py_parser.py", line 970, in execute
    res = mod_s.call(
          ^^^^^^^^^^^
  File "/storage/emulated/0/dpl/lib/core/module_handling.py", line 415, in call
    ret = func(frame, file, *args)
          ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/storage/emulated/0/dpl/lib/std/text_io.py", line 36, in myInput
    res = input(prompt if prompt not in dpl.falsy else "")
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
KeyboardInterrupt

[???]
Finished with an error: 4
Error Name: PYTHON_ERROR
